[package]
name = "numeric-sort"
version = "0.1.4"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/numeric-sort"
documentation = "https://docs.rs/numeric-sort"
description = """
A zero-allocation, human-readable sorting library.
"""

[features]
default = ["alloc"]
alloc = []
